--- a/CRUD_UsingDependencyInjection/Views/_ViewImports.cshtml
+++ b/CRUD_UsingDependencyInjection/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CRUD_UsingDependencyInjection
 @using CRUD_UsingDependencyInjection.Models
+@using CRUD_UsingDependencyInjection.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
